RESOLVED FIXED 179155
[curl] Fix build after r224299
https://bugs.webkit.org/show_bug.cgi?id=179155
Summary [curl] Fix build after r224299
Fujii Hironori
Reported 2017-11-01 21:14:23 PDT
[curl] Fix build after r224299 Bug 175597 added 6th argument of ResourceHandle constructor. >ResourceHandleCurl.cpp >C:\webkit\ga\Source\WebCore\platform\network\curl\ResourceHandleCurl.cpp(248): error C2661: 'WebCore::ResourceHandle::ResourceHandle': 5 個の引数を伴うオーバーロードされた関数はありません。 >C:\webkit\ga\Source\WebCore\platform\network\curl\ResourceHandleCurl.cpp(248): error C2672: 'adoptRef': 一致するオーバーロードされた関数が見つかりませんでした。
Attachments
Patch (2.04 KB, patch)
2017-11-01 21:20 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2017-11-01 21:20:19 PDT
WebKit Commit Bot
Comment 2 2017-11-01 21:49:13 PDT
Comment on attachment 325674 [details] Patch Clearing flags on attachment: 325674 Committed r224319: <https://trac.webkit.org/changeset/224319>
WebKit Commit Bot
Comment 3 2017-11-01 21:49:14 PDT
All reviewed patches have been landed. Closing bug.
Daniel Bates
Comment 4 2017-11-01 21:57:11 PDT
Thank you for fixing this bug!
Radar WebKit Bug Importer
Comment 5 2017-11-15 12:27:09 PST
Note You need to log in before you can comment on or make changes to this bug.