[curl] Fix build after r224299 https://bugs.webkit.org/show_bug.cgi?id=179155

Unreviewed.

Bug 175597 added the 6th argument of ResourceHandle constructor.
Apply the same change of ResourceHandleCFNet.cpp to
platformLoadResourceSynchronously of ResourceHandleCurl.cpp.

No new tests since there should be no behavioral change other

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2017-11-01

* platform/network/curl/ResourceHandleCurl.cpp:
(WebCore::ResourceHandle::platformLoadResourceSynchronously):
Added the 6th arguemnt shouldContentEncodingSniff.

Canonical link: https://commits.webkit.org/195266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224319 268f45cc-cd09-0410-ab3c-d52691b4dbfc